part2/04-security/network-security/manifests/foo-deny-egress.yaml
## Kubernetes Advanced labs v1.5.0
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foo-deny-egress
spec:
  podSelector:
    matchLabels:
      app: foo
  policyTypes:
  - Egress
  egress: []
