part2/04-security/network-security/manifests/web-allow-prod.yaml
## Kubernetes Advanced labs v1.5.0
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-prod
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: production
