part2/04-security/network-security/manifests/web-deny-all.yaml
## Kubernetes Advanced labs v1.5.0
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: []
